2003-10-19  Per Bothner  <per@bothner.com>

	* srfi1.scm (map-in-order):  Define as an alias for map.

2003-09-04  Per Bothner  <per@bothner.com>

	* HTTP.scm (response-status, error-response):  HTTP requires a space
	after the response code, even if the message is empty,

2003-07-21  Per Bothner  <per@bothner.com>

	* gui.scm:  Rewrite to make use of gnu.kawa.models and
	gnu.kawa.swingviews.

2003-05-31  Chris Dean  <ctdean@mercedsystems.com>

	* srfi1.scm (iota):   Fix default for optional step parameter.

2003-05-07  Per Bothner  <per@bothner.com>

	* HTTP.scm (request-parameter):  Add optional default parameter.

2003-03-21  Chris Dean  <Chris.Dean@sokitomi.com>

	* srfi1.scm (list-tabulate):  Fix thinko.

2003-01-29  Per Bothner  <per@bothner.com>

	* gui.scm: New file.

2003-01-24  Per Bothner  <per@bothner.com>

	* cut.scm:  New file.  Imported implementation of SRFI-26, written
	by Al Petrofsky and Sebastian Egner.
	Added moduile-export.
	* Makefile.am (java_SCM):  Added cut.scm.

2002-11-12  Per Bothner  <per@bothner.com>

	* srfi1.scm: Fix typo - comment start was written with colons.

2002-09-28  Per Bothner  <per@bothner.com>

	* HTTP.scm (request-parameter, (request-parameters):  New.
	Suggested by Marco Vezzoli <marco.vezzoli@st.com>.

2002-09-21  Per Bothner  <per@bothner.com>

	* DefineRecordType.scm:  New macro, implements SRFI-9.
	* Makefile.am (java_SCM):  Add DefineRecordType.scm.

2002-07-30  Per Bothner  <per@bothner.com>

	* HTTP.scm (get-response, response-status, error-response,
	current-servlet, current-servlet-context, current-servlet-config,
	servlet-context-realpath):  New procedures.

2002-07-25  Per Bothner  <per@bothner.com>

	* readtable.scm ((get-dispatch-macro-table):  Fix obvious bug.

2002-07-24  Per Bothner  <per@bothner.com>

	* printf.scm (stdio:hex-upper-case?):  Add type specification.

2002-07-23  Per Bothner  <per@bothner.com>

	* XML.scm (parse-xml-from-url):  Indate to invoke correct method.
