@@ -1,3 +1,10 @@
+2004-02-13  Per Bothner  <per@bothner.com>
+
+	* gui.scm (fill, draw, with-paint, with-composite, composite-src-over,
+	composite-src, read-image, rotation, with-transform, color-red):
+	New functions and constants.
+	(panel):  Removed function - use SwingPaintable class instead.
+
 2003-10-19  Per Bothner  <per@bothner.com>
 
 	* srfi1.scm (map-in-order):  Define as an alias for map.
